Add "Add to cart" and view cart, link view

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -119,7 +119,7 @@
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                <li><a href="#" class="fa fa-shopping-cart" data-id="@product.Maloaisp"></a></li>
+                                <li><a href="#" class="fa fa-shopping-cart" data-id="@product.Masp"></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
