--- a/WebApplication1/Views/Shoppingcart/Index.cshtml
+++ b/WebApplication1/Views/Shoppingcart/Index.cshtml
@@ -58,7 +58,7 @@
                                         </td>
                                         <td class="shoping__cart__quantity">
                                             <div class="quantity">
-                                                <div class="pro-qty" data-id="@item.Masp">
+                                                <div class="pro-qty pro-qty-add" data-id="@item.Masp">
                                                     <input type="text" value="@cds.Find(p => p.Masp == item.Masp).Quantity">
                                                 </div>
                                             </div>
