--- a/WebApplication1/Views/Shoppingcart/Index.cshtml
+++ b/WebApplication1/Views/Shoppingcart/Index.cshtml
@@ -78,7 +78,7 @@
             <div class="col-lg-12">
                 <div class="shoping__cart__table">
                     <table>
-                        @if (items == null)
+                        @if (items == null || items.Count < 1)
                         {
                             <h3>Giỏ hàng trống</h3>
                         }
