--- a/WebApplication1/Views/Shared/_AdminLayout.cshtml
+++ b/WebApplication1/Views/Shared/_AdminLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "_AdminLayout";
+    ViewData["Title"] = "Admin Dashboard";
 }
 
 <!doctype html>
@@ -14,7 +14,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sufee Admin - HTML5 Admin Template</title>
+    <title>@ViewData["Title"]</title>
     <meta name="description" content="Sufee Admin - HTML5 Admin Template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -31,10 +31,13 @@
     <link rel="stylesheet" href="../vendors/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="../vendors/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css">
 
-
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+
+    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
 </head>
 
@@ -65,7 +68,7 @@
                         <a href="../#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Đơn hàng</a>
                         <ul class="sub-menu children dropdown-menu">
                             <li><i class="fa fa-table"></i><a href="../tables-basic.html">Biểu đồ thống kê</a></li>
-                            <li><i class="fa fa-table"></i><a href="../tables-data.html">Thêm, xóa, sửa</a></li>
+                            <li><i class="fa fa-table"></i><a asp-action="OrderManager" asp-controller="Admin">Thêm, xóa, sửa</a></li>
                         </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
@@ -258,6 +261,8 @@
     <script src="../vendors/popper.js/dist/umd/popper.min.js"></script>
     <script src="../vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="../assets/js/main.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/admindash.js"></script>
 
 
     <script src="../vendors/chart.js/dist/Chart.bundle.min.js"></script>
@@ -278,6 +283,9 @@
     <script src="../vendors/datatables.net-buttons/js/buttons.print.min.js"></script>
     <script src="../vendors/datatables.net-buttons/js/buttons.colVis.min.js"></script>
     <script src="../assets/js/init-scripts/data-table/datatables-init.js"></script>
+
+    <script src="../vendors/chart.js/dist/Chart.bundle.min.js"></script>
+    <script src="../assets/js/init-scripts/chart-js/chartjs-init.js"></script>
     <script>
         (function ($) {
             "use strict";
