--- a/WebApplication1/Views/DangNhap/DangNhap.cshtml
+++ b/WebApplication1/Views/DangNhap/DangNhap.cshtml
@@ -1,10 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-
-    var error = ViewBag.Error;
-    
+﻿@{ 
+    Layout = null;
 }
-<p>Kết quả: @error</p>
-Đây là tramg index.cshtml của View Đăng Nhập
+<h1>error</h1>
