--- a/WebApplication1/Views/Admin/OrderDetail.cshtml
+++ b/WebApplication1/Views/Admin/OrderDetail.cshtml
@@ -35,7 +35,7 @@
     <div class="animated fadeIn">
         <div class="row">
             <div class="col-md-6 card p-2">
-                @if (String.IsNullOrEmpty(order.Hoten))
+                @if (!String.IsNullOrEmpty(order.Hoten))
                 {
                     <span>Tên người nhận: @order.Hoten</span><br>
                     <span>Số điện thoại: @order.Sdt</span><br>
@@ -114,7 +114,7 @@
 
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <input type="hidden" name="id" value="@Model.Madh" />
+                    <input type="hidden" name="id" value="@Model.Madh"/>
                     <div class="row">
                         <div class="col-md-6">
                             <span>Tên món: </span>
@@ -153,7 +153,7 @@
         <div class="modal-content">
 
             <!-- Modal Header -->
-            <form asp-controller="Admin" asp-action="EditOrder" method="post">
+            <form class="needs-validation" asp-controller="Admin" asp-action="EditOrder" method="post">
                 <div class="modal-header">
                     <h4 class="modal-title">Chỉnh sửa</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -165,20 +165,27 @@
                     <div class="row">
                         <div class="col-md-6">
                             <span>Tên người nhận: </span><br />
-                            <input class="form-control" name="hoten" value="@order.Hoten"><br />
+                            <input class="form-control" name="hoten" value="@order.Hoten" required>
                             <span>Số điện thoại: </span><br />
-                            <input class="form-control" name="sdt" value="@order.Sdt"><br />
+                            <input class="form-control" name="sdt" value="@order.Sdt" required><br />
                         </div>
                         <div class="col-md-6">
                             <span>Địa chỉ: </span><br>
-                            <input class="form-control" name="diachi" value="@order.Diachi"><br />
+                            <input class="form-control" name="diachi" value="@order.Diachi" required><br />
+                        </div>
+                        <div class="col-md-6">
+                            <span>Tình trạng: </span><br>
+                            <select name="tt" class="form-control">
+                                <option value="1">Đã hoàn thành</option>
+                                <option value="0">Chưa hoàn thành</option>
+                            </select><br />
                         </div>
                     </div>
                 </div>
 
                 <!-- Modal footer -->
                 <div class="modal-footer row">
-                    <button type="submit" class="btn btn-success col-sm-3 pl-3">Thêm</button>
+                    <button type="submit" class="btn btn-success col-sm-3 pl-3">Cập nhật</button>
                 </div>
             </form>
         </div>
