--- a/WebApplication1/Views/CheckOut/Index.cshtml
+++ b/WebApplication1/Views/CheckOut/Index.cshtml
@@ -145,61 +145,40 @@
                             <div class="col-lg-12">
                                 <div class="checkout__input">
                                     <p>Họ tên<span>*</span></p>
-                                    <input type="text" name="hoten" value="@user.Hoten">
+                                    <input type="text" name="hoten" value="@user.Hoten" required>
                                 </div>
                             </div>
                         </div>
                         <div class="checkout__input">
                             <p>Quốc gia<span>*</span></p>
-                            <input type="text" name="country" value="@user.Country">
+                            <input type="text" name="country" value="@user.Country" required>
                         </div>
                         <div class="checkout__input">
                             <p>Địa chỉ<span>*</span></p>
-                            <input type="text" name="tenduong" value="@user.Tenduong" placeholder="Street Address" class="checkout__input__add">
+                            <input type="text" name="tenduong" value="@user.Tenduong" placeholder="Street Address" class="checkout__input__add" required>
                             <input type="text" placeholder="Apartment, suite, unite ect (optinal)">
                         </div>
                         <div class="checkout__input">
                             <p>Thành phố/ Tỉnh<span>*</span></p>
-                            <input type="text" name="diachi" value="@user.Diachi">
+                            <input type="text" name="diachi" value="@user.Diachi" required>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="checkout__input">
                                     <p>Số điện thoại<span>*</span></p>
-                                    <input type="text" name="sdt" value="@user.Sodt">
+                                    <input type="text" name="sdt" value="@user.Sodt" required>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="checkout__input">
                                     <p>Email<span>*</span></p>
-                                    <input type="text" name="email" value="@user.Email">
+                                    <input type="text" name="email" value="@user.Email" required>
                                 </div>
                             </div>
                         </div>
-                        <div class="checkout__input__checkbox">
-                            <label for="acc">
-                                Create an account?
-                                <input type="checkbox" id="acc">
-                                <span class="checkmark"></span>
-                            </label>
-                        </div>
-                        <p>
-                            Create an account by entering the information below. If you are a returning customer
-                            please login at the top of the page
-                        </p>
+                        
                         <div class="checkout__input">
-                            <p>Account Password<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <div class="checkout__input__checkbox">
-                            <label for="diff-acc">
-                                Ship to a different address?
-                                <input type="checkbox" id="diff-acc">
-                                <span class="checkmark"></span>
-                            </label>
-                        </div>
-                        <div class="checkout__input">
-                            <p>Ghi chú<span>*</span></p>
+                            <p>Ghi chú<span></span></p>
                             <input type="text" name="ghichu"
                                    placeholder="Notes about your order, e.g. special notes for delivery.">
                         </div>
@@ -221,16 +200,7 @@
                             <div class="checkout__order__subtotal">Subtotal <span>@cart.Total</span></div>
                             <div class="checkout__order__total">Total <span>@cart.Total</span></div>
                             <div class="checkout__input__checkbox">
-                                <label for="acc-or">
-                                    Create an account?
-                                    <input type="checkbox" id="acc-or">
-                                    <span class="checkmark"></span>
-                                </label>
-                            </div>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adip elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua.
-                            </p>
+                               
                             <div class="checkout__input__checkbox">
                                 <label for="payment">
                                     Check Payment
