--- a/WebApplication1/Views/ProductDetail/Detail.cshtml
+++ b/WebApplication1/Views/ProductDetail/Detail.cshtml
@@ -50,13 +50,13 @@
                     </div>
                     <div class="product__details__pic__slider owl-carousel">
                         <img data-imgbigurl="../img/product/details/product-details-2.jpg"
-                             src="../img/product/details/thumb-1.jpg" alt="">
+                             src="../img/product/details/@Model.Hinhanh" alt="">
                         <img data-imgbigurl="../img/product/details/product-details-3.jpg"
-                             src="../img/product/details/thumb-2.jpg" alt="">
+                             src="../img/product/details/@Model.Hinhanh" alt="">
                         <img data-imgbigurl="../img/product/details/product-details-5.jpg"
-                             src="../img/product/details/thumb-3.jpg" alt="">
+                             src="../img/product/details/@Model.Hinhanh" alt="">
                         <img data-imgbigurl="../img/product/details/product-details-4.jpg"
-                             src="../img/product/details/thumb-4.jpg" alt="">
+                             src="../img/product/details/@Model.Hinhanh" alt="">
                     </div>
                 </div>
             </div>
@@ -73,9 +73,7 @@
                     </div>
                     <div class="product__details__price">@Model.Gia</div>
                     <p>
-                        Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vestibulum ac diam sit amet quam
-                        vehicula elementum sed sit amet dui. Sed porttitor lectus nibh. Vestibulum ac diam sit amet
-                        quam vehicula elementum sed sit amet dui. Proin eget tortor risus.
+                        @Model.Mota
                     </p>
                     <div class="product__details__quantity">
                         <div class="quantity">
@@ -101,78 +99,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-lg-12">
-                <div class="product__details__tab">
-                    <ul class="nav nav-tabs" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="#tabs-1" role="tab"
-                               aria-selected="true">Description</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#tabs-2" role="tab"
-                               aria-selected="false">Information</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#tabs-3" role="tab"
-                               aria-selected="false">Reviews <span>(1)</span></a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane active" id="tabs-1" role="tabpanel">
-                            <div class="product__details__tab__desc">
-                                <h6>Products Infomation</h6>
-                                <p>
-                                    @Model.Mota
-                                </p>
-                            </div>
-                        </div>
-                        <div class="tab-pane" id="tabs-2" role="tabpanel">
-                            <div class="product__details__tab__desc">
-                                <h6>Products Infomation</h6>
-                                <p>
-                                    Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-                                    Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus.
-                                    Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam
-                                    sit amet quam vehicula elementum sed sit amet dui. Donec rutrum congue leo
-                                    eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.
-                                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent
-                                    sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ac
-                                    diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante
-                                    ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-                                    Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                                    Proin eget tortor risus.
-                                </p>
-                                <p>
-                                    Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem
-                                    ipsum dolor sit amet, consectetur adipiscing elit. Mauris blandit aliquet
-                                    elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna dictum
-                                    porta. Cras ultricies ligula sed magna dictum porta. Sed porttitor lectus
-                                    nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="tab-pane" id="tabs-3" role="tabpanel">
-                            <div class="product__details__tab__desc">
-                                <h6>Products Infomation</h6>
-                                <p>
-                                    Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.
-                                    Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus.
-                                    Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam
-                                    sit amet quam vehicula elementum sed sit amet dui. Donec rutrum congue leo
-                                    eget malesuada. Vivamus suscipit tortor eget felis porttitor volutpat.
-                                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Praesent
-                                    sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ac
-                                    diam sit amet quam vehicula elementum sed sit amet dui. Vestibulum ante
-                                    ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-                                    Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                                    Proin eget tortor risus.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </div> 
         </div>
     </div>
 </section>
@@ -225,29 +152,5 @@
             </div>
     </div>
 </section>
-<!-- The Modal -->
-<div class="modal fade" id="LoginModal">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
 
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <h4 class="modal-title">Thông báo</h4>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
-
-            <!-- Modal body -->
-            <div class="modal-body">
-                Đăng nhập trước khi thêm hàng vào giỏ
-            </div>
-
-            <!-- Modal footer -->
-            <div class="modal-footer row">
-                <button type="button" class="btn btn-secondary col-sm-3 pl-3 btn-login">Đăng nhập/ đăng ký</button>
-                <button type="button" class="btn btn-secondary col-sm-3" data-dismiss="modal">Close</button>
-            </div>
-
-        </div>
-    </div>
-</div>
 
