--- a/WebApplication1/Views/Shared/_AdminLayout.cshtml
+++ b/WebApplication1/Views/Shared/_AdminLayout.cshtml
@@ -53,7 +53,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="./"><img src="../images/logo.png" alt="Logo"></a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index">Feel coffee</a>
                 <a class="navbar-brand hidden" href="./"><img src="../images/logo2.png" alt="Logo"></a>
             </div>
 
@@ -67,7 +67,7 @@
                     <li class="menu-item-has-children dropdown">
                         <a href="../#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Đơn hàng</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-table"></i><a href="../tables-basic.html">Biểu đồ thống kê</a></li>
+                            <li><i class="fa fa-table"></i><a asp-action="ChartAtOrder" asp-controller="Admin">Biểu đồ thống kê</a></li>
                             <li><i class="fa fa-table"></i><a asp-action="OrderManager" asp-controller="Admin">Thêm, xóa, sửa</a></li>
                         </ul>
                     </li>
