--- a/WebApplication1/Views/DangNhap/Index.cshtml
+++ b/WebApplication1/Views/DangNhap/Index.cshtml
@@ -1,45 +1,75 @@
 ﻿@{ Layout = null; }
+
+
+<!------ Include the above in your HEAD tag ---------->
+
+<!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-    <link href="~/css/styleDangNhap.css" rel="stylesheet" />
-    <link href="~/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/fontawesome-pro-5.12.0-web/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">
+    <title>Login Page</title>
+    <!--Made with love by Mutiullah Samim -->
+    <!--Bootsrap 4 CDN-->
+    <link rel="stylesheet" href="../css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="../css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="../css/jquery-ui.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
+    <script src="../js/jquery-3.3.1.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/login.css">
+    <!--Fontawesome CDN-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
 </head>
 <body>
+    <div class="container">
+        <div class="d-flex justify-content-center h-100">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Sign In</h3>
+                    <div class="d-flex justify-content-end social_icon">
+                        <span><i class="fab fa-facebook-square"></i></span>
+                        <span><i class="fab fa-google-plus-square"></i></span>
+                        <span><i class="fab fa-twitter-square"></i></span>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form method="POST" asp-controller="DangNhap" asp-action="DangNhap">
+                        <div class="input-group form-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="fas fa-user"></i></span>
+                            </div>
+                            <input type="text" class="form-control" id="Username" placeholder="Tên tài khoản" name="Tentk" autocomplete="off" required>
 
-    <div class="header--nav">
-        <div class="humberger__menu__logo">
+                        </div>
+                        <div class="input-group form-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="fas fa-key"></i></span>
+                            </div>
+                            <input type="password" class="form-control" id="Password" placeholder="Mật khẩu" name="Password" required>
+                        </div>
+                        <div class="row align-items-center remember">
+                            <input type="checkbox">Remember Me
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Login" class="btn float-right login_btn">
+                        </div>
+                    </form>
+                </div>
 
-            <a href="#"><img style="width:100px; height:90px " src="../img/logo.png" alt=""></a>
+
+                <div class="card-footer">
+                    <div class="d-flex justify-content-center links">
+                        Don't have an account?<a asp-action="DangKy" asp-controller="DangKy">Sign Up</a>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <a href="#">Forgot your password?</a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="login d-flex">
-
-        <form method="POST" asp-controller="DangNhap" asp-action="DangNhap">
-            <div class="form-group">
-                <label for="Username"><i class="fas fa-user-alt"></i>&nbsp; User</label>
-                <input type="text" class="form-control" id="Username" placeholder="Tên tài khoản" name="Tentk" autocomplete="off" required>
-            </div>
-            <div class="form-group">
-                <label for="Password"><i class="fas fa-key"></i>&nbsp; Password</label>
-                <input type="password" class="form-control" id="Password" placeholder="Mật khẩu" name="Password" required>
-            </div>
-            <div class="button d-flex">
-                <button type="submit" class="btn">Đăng nhập</button>
-                <a asp-action="DangKy" asp-controller="DangKy"><button type="button" class="btn ml-5">Tạo tài khoản</button></a>
-
-
-                <a href="/taikhoan/dangky">
-            </div>
-            @if (ViewBag.error != null)
-            {
-                <div class="alert alert-danger mt-3" role="alert">
-                    @ViewBag.error
-                </div>}
-        </form>
     </div>
 </body>
 </html>
