--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                 </ul>
             </div>
             <div class="header__top__right__auth">
-                <a href="#"><i class="fa fa-user"></i> Login</a>
+                <a href="#"><img class="user-avatar rounded-circle" src="../img/admin.png" alt="User Avatar"> Login</a>
             </div>
         </div>
         <nav class="humberger__menu__nav mobile-menu">
@@ -252,7 +252,7 @@
     <!-- Footer Section End -->
     <!-- Js Plugins -->
     <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <script src="../js/jquery.nice-select.min.js"></script>
     <script src="../js/jquery-ui.min.js"></script>
     <script src="../js/jquery.slicknav.js"></script>
