--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@{ 
     Cart cart = ViewData["cart"] as Cart;
+    Khachhang kh = ViewData["kh"] as Khachhang;
 }
 
 <!DOCTYPE html>
@@ -58,7 +59,25 @@
                 </ul>
             </div>
             <div class="header__top__right__auth">
-                <a href="#"><img class="user-avatar rounded-circle" src="../img/admin.png" alt="User Avatar"> Login</a>
+                <div class="dropdown">
+                    @if (kh != null)
+                    {
+                        <a class="dropdown-toggle" data-toggle="dropdown"><img style="float: right;margin-top: 4px;width: 32px;" class="user-avatar rounded-circle" src="../img/admin.png" alt="User Avatar"></a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="./shop-details.html">Thông tin cá nhân</a>
+                            <a class="dropdown-item" href="./shoping-cart.html">Thông tin đơn hàng</a>
+                            @if (WebApplication1.Others.Function.CheckRole(kh.Matk))
+                            {
+                                <a class="dropdown-item" href="./shoping-cart.html">Admin dashboard</a>
+                            }
+                        </div>
+                    }
+                    else
+                    {
+                        <a asp-controller="DangNhap" asp-action="Index"><i class="fa fa-user"></i> Login</a>
+                    }
+                </div>
+
             </div>
         </div>
         <nav class="humberger__menu__nav mobile-menu">
@@ -123,8 +142,25 @@
                                     <li><a href="#">English</a></li>
                                 </ul>
                             </div>
-                            <div class="header__top__right__auth">
-                                <a asp-controller="DangNhap" asp-action="Index"><i class="fa fa-user"></i> Login</a>
+                            <div class="header__top__right__auth ">
+                                <div class="dropdown">
+                                    @if (kh != null)
+                                    {
+                                        <a class="dropdown-toggle" data-toggle="dropdown"><img style="float: right;margin-top: 4px;width: 32px;" class="user-avatar rounded-circle" src="../img/admin.png" alt="User Avatar"></a>
+                                        <div class="dropdown-menu">
+                                            <a class="dropdown-item" href="./shop-details.html">Thông tin cá nhân</a>
+                                            <a class="dropdown-item" href="./shoping-cart.html">Thông tin đơn hàng</a>
+                                            @if (WebApplication1.Others.Function.CheckRole(kh.Matk))
+                                            {
+                                                <a class="dropdown-item" href="./shoping-cart.html">Admin dashboard</a>
+                                            }
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <a asp-controller="DangNhap" asp-action="Index"><i class="fa fa-user"></i> Login</a>
+                                    }
+                                </div>
                             </div>
                         </div>
                     </div>
